--- a/client/ui/semester.html
+++ b/client/ui/semester.html
@@ -38,6 +38,7 @@
 <template name="moduleInfo">
     <div class="code"></div>
     <div class="title"></div>
+    <div class="semesters placeholder" data-value="true"></div>
     <div class="semesters sem1" data-value="false"> Semester 1 </div>
     <div class="semesters sem2" data-value="false"> Semester 2 </div>
     <div class="semesters sem3" data-value="false"> Special Term 1 </div>
